methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:26: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:39: error: Unmatched closing brace '}' ignored here
}
^